--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,6 @@
     <string name="txt_resultStr">Result</string>
     <string name="etxt_imput_first_valueStr">Imput the first Value</string>
     <string name="etxt_imput_second_valueStr">Imput the first Value</string>
-    <string name="btn_division_subStr">Division</string>
-    <string name="btn_division_multStr">Multiplication</string>
+    <string name="btn_calculate_divStr">Division</string>
+    <string name="btn_calculate_multStr">Multiplication</string>
 </resources>
